tests/baselines/reference/parserES3Accessors2.errors.txt
tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors2.ts(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors2.ts (1 errors) ====
    class C {
        set Foo(a) { }
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }